[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_task"]

[project]
name = "hermes-task-spec"
version = "0.1.0"
description = "Declarative Markdown task specs for Hermes cron (kubectl-style apply/delete/status)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
hermes-task = "hermes_task.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
