[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_job"]

[project]
name = "hermes-job"
version = "0.1.0"
description = "Declarative Markdown job specs for Hermes cron (kubectl-style apply/delete/status)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
hermes-job = "hermes_job.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
