[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_jobctl"]

[tool.hatch.build.targets.wheel.force-include]
"hermes_jobctl/plugin.yaml" = "hermes_jobctl/plugin.yaml"

[project]
name = "hermes-jobctl"
version = "0.1.0"
description = "Declarative Markdown job specs for Hermes cron (kubectl-style apply/delete/status)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
hermes-jobctl = "hermes_jobctl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
